--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
             <div class="gallery-grid">
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg?token=GHSAT0AAAAAADTOFXSGVZIKLZWWA6DJC6EC2L7SZWQ"
+                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/MobileApp%2001.jpeg?token=GHSAT0AAAAAADTOFXSGWCUN5DGG5WTP6FSA2L7U7FQ"
                         alt="Mobile App Development">
                     <div class="gallery-overlay">
                         <span class="gallery-title">Mobile App Development</span>
