--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
             <div class="gallery-grid">
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/MobileApp%2001.jpeg?token=GHSAT0AAAAAADTOFXSGWCUN5DGG5WTP6FSA2L7U7FQ"
+                    <img src="https://github.com/IftikharZahid/App_Gallery/blob/4b0ca8cbd37c8fd50d857ab81171d79c0b02581f/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg"
                         alt="Mobile App Development">
                     <div class="gallery-overlay">
                         <span class="gallery-title">Mobile App Development</span>
