--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div>
 
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/MobileApp%2001.jpeg?token=GHSAT0AAAAAADTOFXSHDQ7VCYFAFINFYSQG2L7SYIQ"
+                    <img src="https://github.com/IftikharZahid/App_Gallery/blob/main/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg"
                         alt="Mobile App Design">
                     <div class="gallery-overlay">
                         <span class="gallery-title">Mobile App Design</span>
