Update first gallery image to Flickr embed

--- a/index.html
+++ b/index.html
@@ -379,13 +379,12 @@
             </div>
 
             <div class="gallery-grid">
-                <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://github.com/IftikharZahid/App_Gallery/blob/4b0ca8cbd37c8fd50d857ab81171d79c0b02581f/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg"
-                        alt="Mobile App Development">
-                    <div class="gallery-overlay">
-                        <span class="gallery-title">Mobile App Development</span>
-                        <span class="gallery-category">React Native</span>
-                    </div>
+                <div class="gallery-item">
+                    <a data-flickr-embed="true" href="https://www.flickr.com/photos/maha_samra/51905675987"
+                        title="Mobile App UI"><img
+                            src="https://live.staticflickr.com/65535/51905675987_7a3aea847a_b.jpg" width="1024"
+                            height="666" alt="Mobile App UI" /></a>
+                    <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 </div>
 
                 <div class="gallery-item" onclick="openLightbox(this)">
