Update second gallery image to Flickr embed

--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
                     <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 </div>
 
-                <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://github.com/IftikharZahid/App_Gallery/blob/main/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg"
-                        alt="Mobile App Design">
-                    <div class="gallery-overlay">
-                        <span class="gallery-title">Mobile App Design</span>
-                        <span class="gallery-category">React Native</span>
-                    </div>
+                <div class="gallery-item">
+                    <a data-flickr-embed="true"
+                        href="https://www.flickr.com/photos/193107373@N06/51208370498/in/photolist-FhoDUi-PST5oP-2mK5CMm-2n5Ja74-Lu8VcA-2o7ViGG-2kXDjgG-26AQDz9-ML2YQY-QCHm6Q-TQCF8f-2o7T5hW-29pBoFa-dQiZrr-2oRKbXE-dQj1kp-2o7VHpu-ML2Yvu-2m2a9Tn-2n4TEEL-2iEtQVm-2m27htC-2iufrfQ-dQpyoh-258gpbA/"
+                        title="Food App design"><img
+                            src="https://live.staticflickr.com/65535/51208370498_91677d89d7_b.jpg" width="1024"
+                            height="688" alt="Food App design" /></a>
+                    <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 </div>
 
                 <div class="gallery-item" onclick="openLightbox(this)">
