--- a/index.html
+++ b/index.html
@@ -379,21 +379,22 @@
             </div>
 
             <div class="gallery-grid">
-                <div class="gallery-item">
-                    <a data-flickr-embed="true" href="https://www.flickr.com/photos/maha_samra/51905675987"
-                        title="Mobile App UI"><img
-                            src="https://live.staticflickr.com/65535/51905675987_7a3aea847a_b.jpg" width="1024"
-                            height="666" alt="Mobile App UI" /></a>
-                    <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                <div class="gallery-item" onclick="openLightbox(this)">
+                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg?token=GHSAT0AAAAAADTOFXSGVZIKLZWWA6DJC6EC2L7SZWQ"
+                        alt="Mobile App Development">
+                    <div class="gallery-overlay">
+                        <span class="gallery-title">Mobile App Development</span>
+                        <span class="gallery-category">React Native</span>
+                    </div>
                 </div>
 
-                <div class="gallery-item">
-                    <a data-flickr-embed="true"
-                        href="https://www.flickr.com/photos/193107373@N06/51208370498/in/photolist-FhoDUi-PST5oP-2mK5CMm-2n5Ja74-Lu8VcA-2o7ViGG-2kXDjgG-26AQDz9-ML2YQY-QCHm6Q-TQCF8f-2o7T5hW-29pBoFa-dQiZrr-2oRKbXE-dQj1kp-2o7VHpu-ML2Yvu-2m2a9Tn-2n4TEEL-2iEtQVm-2m27htC-2iufrfQ-dQpyoh-258gpbA/"
-                        title="Food App design"><img
-                            src="https://live.staticflickr.com/65535/51208370498_91677d89d7_b.jpg" width="1024"
-                            height="688" alt="Food App design" /></a>
-                    <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                <div class="gallery-item" onclick="openLightbox(this)">
+                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/MobileApp%2001.jpeg?token=GHSAT0AAAAAADTOFXSHDQ7VCYFAFINFYSQG2L7SYIQ"
+                        alt="Mobile App Design">
+                    <div class="gallery-overlay">
+                        <span class="gallery-title">Mobile App Design</span>
+                        <span class="gallery-category">React Native</span>
+                    </div>
                 </div>
 
                 <div class="gallery-item" onclick="openLightbox(this)">
@@ -443,6 +444,194 @@
     </div>
 
 
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="section">
+        <div class="container">
+            <div class="section-header">
+                <span class="hero-label">Testimonials</span>
+                <h2>What Clients Say</h2>
+                <p class="section-subtitle">Feedback from clients and colleagues I've had the pleasure of working with.
+                </p>
+            </div>
+
+            <!-- Testimonials Slider -->
+            <div class="testimonial-slider">
+                <div class="testimonial-slides">
+                    <!-- Slide 1 -->
+                    <div class="testimonial-slide active">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <p class="testimonial-text">"Iftikhar delivered an exceptional mobile app that exceeded our
+                                expectations. His attention to detail and understanding of user experience made our
+                                project a huge success."</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face"
+                                        alt="Bilal Ahmed">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Bilal Ahmed</h4>
+                                    <p>CEO, TechVenture Lahore</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 2 -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                            <p class="testimonial-text">"Working with Iftikhar was a fantastic experience. He
+                                transformed our complex requirements into a beautiful, functional React Native app.
+                                Highly recommended!"</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=100&h=100&fit=crop&crop=face"
+                                        alt="Fatima Malik">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Fatima Malik</h4>
+                                    <p>Product Manager, Nayatel</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 3 -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <p class="testimonial-text">"Iftikhar's expertise in Firebase helped us build a scalable
+                                backend for our educational platform. He's professional, reliable, and delivers quality
+                                work on time."</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
+                                        alt="Usman Tariq">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Usman Tariq</h4>
+                                    <p>Founder, LearnPak Academy</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 4 -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                            <p class="testimonial-text">"Outstanding e-commerce app! The UI is stunning and the
+                                performance is exceptional. Iftikhar is now our go-to developer for all mobile
+                                projects."</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=100&h=100&fit=crop&crop=face"
+                                        alt="Ayesha Siddiqui">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Ayesha Siddiqui</h4>
+                                    <p>CTO, DarazTech Karachi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 5 -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                            <p class="testimonial-text">"Python automation scripts saved our team countless hours. His
+                                understanding of AI and data processing is impressive. A true professional!"</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=100&h=100&fit=crop&crop=face"
+                                        alt="Hassan Raza">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Hassan Raza</h4>
+                                    <p>Data Lead, Systems Ltd</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 6 -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                            <p class="testimonial-text">"Great communication and excellent technical skills. Iftikhar
+                                understood our vision perfectly and delivered a product that our users love."</p>
+                            <div class="testimonial-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=100&h=100&fit=crop&crop=face"
+                                        alt="Sana Amir">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Sana Amir</h4>
+                                    <p>Director, Arbisoft</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Navigation Arrows -->
+                <button class="slider-arrow slider-prev" aria-label="Previous testimonial">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </button>
+                <button class="slider-arrow slider-next" aria-label="Next testimonial">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+
+                <!-- Dots Navigation -->
+                <div class="slider-dots">
+                    <button class="slider-dot active" data-slide="0"></button>
+                    <button class="slider-dot" data-slide="1"></button>
+                    <button class="slider-dot" data-slide="2"></button>
+                    <button class="slider-dot" data-slide="3"></button>
+                    <button class="slider-dot" data-slide="4"></button>
+                    <button class="slider-dot" data-slide="5"></button>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="contact" class="section">
         <div class="container contact-container">
@@ -453,8 +642,7 @@
             </p>
 
             <!-- Contact Form -->
-            <form class="contact-form" id="contact-form" action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="f8665e87-6bb4-4702-9468-dc44607979c7">
+            <form class="contact-form" id="contact-form" action="https://formspree.io/f/xnjzjonb" method="POST">
                 <div class="form-row">
                     <div class="form-group">
                         <input type="text" name="name" id="name" placeholder="Your Name" required>
@@ -469,9 +657,6 @@
                 <div class="form-group">
                     <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
                 </div>
-                <!-- Custom Redirect (optional, keeps user on site or shows success message) -->
-                <!-- <input type="hidden" name="redirect" value="https://web3forms.com/success"> -->
-
                 <button type="submit" class="btn btn-primary">
                     <i class="fa-regular fa-paper-plane"></i> Send Message
                 </button>
