--- a/index.html
+++ b/index.html
@@ -442,7 +442,229 @@
         <div id="lightbox-caption"></div>
     </div>
 
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="section">
+        <div class="container">
+            <div class="text-center" style="margin-bottom: 40px;">
+                <span class="hero-label">Client Feedback</span>
+                <h2>What People Say</h2>
+                <p style="color: var(--text-muted); max-width: 600px; margin: 15px auto 0;">
+                    Hear from clients and colleagues who have experienced working with me on various projects.
+                </p>
+            </div>
+        </div>
 
+        <!-- Marquee Container - Full Width -->
+        <div class="testimonials-marquee">
+            <!-- Row 1 - Scrolls Left -->
+            <div class="marquee-row marquee-left">
+                <div class="marquee-track">
+                    <!-- Testimonial 1 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Iftikhar delivered an exceptional mobile app that exceeded
+                                our expectations. His attention to detail and understanding of user experience made
+                                our project a huge success."</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face"
+                                    alt="Ahmed Khan"></div>
+                            <div class="author-info">
+                                <h4>Ahmed Khan</h4>
+                                <p>CEO, TechStart Solutions</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 2 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Working with Iftikhar was a fantastic experience. He
+                                transformed our complex requirements into a beautiful, functional React Native app.
+                                Highly recommended!"</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&h=100&fit=crop&crop=face"
+                                    alt="Sarah Mitchell"></div>
+                            <div class="author-info">
+                                <h4>Sarah Mitchell</h4>
+                                <p>Product Manager, InnovateTech</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 3 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Iftikhar's expertise in Firebase helped us build a scalable
+                                backend for our educational platform. He's professional, reliable, and delivers
+                                quality work on time."</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
+                                    alt="David Chen"></div>
+                            <div class="author-info">
+                                <h4>David Chen</h4>
+                                <p>Founder, EduLearn Academy</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 4 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"We hired Iftikhar for our e-commerce app, and he delivered
+                                beyond expectations. The UI is stunning, and the performance is exceptional. Our
+                                go-to developer!"</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=100&h=100&fit=crop&crop=face"
+                                    alt="Emily Rodriguez"></div>
+                            <div class="author-info">
+                                <h4>Emily Rodriguez</h4>
+                                <p>CTO, ShopEase Inc.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 2 - Scrolls Right -->
+            <div class="marquee-row marquee-right">
+                <div class="marquee-track">
+                    <!-- Testimonial 5 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Iftikhar's Python automation scripts saved our team
+                                countless hours. His understanding of AI and data processing is impressive. A true
+                                professional!"</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=100&h=100&fit=crop&crop=face"
+                                    alt="Michael Brown"></div>
+                            <div class="author-info">
+                                <h4>Michael Brown</h4>
+                                <p>Data Lead, Analytics Pro</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 6 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Outstanding work on our restaurant app! Iftikhar's Redux
+                                expertise and clean code practices made the project a breeze. Looking forward to
+                                future collaborations."</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=100&h=100&fit=crop&crop=face"
+                                    alt="James Wilson"></div>
+                            <div class="author-info">
+                                <h4>James Wilson</h4>
+                                <p>Owner, Foodie Hub</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 7 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Great communication and excellent technical skills.
+                                Iftikhar understood our vision perfectly and delivered a product that our users
+                                love. Highly skilled developer!"</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=100&h=100&fit=crop&crop=face"
+                                    alt="Lisa Thompson"></div>
+                            <div class="author-info">
+                                <h4>Lisa Thompson</h4>
+                                <p>Director, Creative Apps</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 8 -->
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <div class="quote-icon"><i class="fa-solid fa-quote-left"></i></div>
+                            <p class="testimonial-text">"Iftikhar built our digital book platform with exceptional
+                                attention to UX. The app is fast, intuitive, and our readers absolutely love it.
+                                Five stars!"</p>
+                            <div class="testimonial-rating">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"><img
+                                    src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=100&h=100&fit=crop&crop=face"
+                                    alt="Robert Garcia"></div>
+                            <div class="author-info">
+                                <h4>Robert Garcia</h4>
+                                <p>Publisher, ReadMore Inc.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-center" style="margin-top: 30px;">
+                <a href="testimonials.html" class="btn btn-secondary">See All Testimonials</a>
+            </div>
+        </div>
+    </section>
 
     <section id="contact" class="section">
         <div class="container contact-container">
