Update gallery with professional app images: EdTech, E-commerce, Restaurant, Dashboard

--- a/index.html
+++ b/index.html
@@ -379,57 +379,63 @@
             </div>
 
             <div class="gallery-grid">
+                <!-- Educational App -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/032d3fad-f9a2-4cff-af4b-25ee606ca374.jpg?token=GHSAT0AAAAAADTOFXSGVZIKLZWWA6DJC6EC2L7SZWQ"
-                        alt="Mobile App Development">
+                    <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?w=600&h=400&fit=crop"
+                        alt="Educational App">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Mobile App Development</span>
-                        <span class="gallery-category">React Native</span>
+                        <span class="gallery-title">Educational Learning App</span>
+                        <span class="gallery-category">EdTech</span>
                     </div>
                 </div>
 
+                <!-- E-Commerce App -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://raw.githubusercontent.com/IftikharZahid/App_Gallery/refs/heads/main/MobileApp%2001.jpeg?token=GHSAT0AAAAAADTOFXSHDQ7VCYFAFINFYSQG2L7SYIQ"
-                        alt="Mobile App Design">
+                    <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=600&h=400&fit=crop"
+                        alt="E-Commerce App">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Mobile App Design</span>
-                        <span class="gallery-category">React Native</span>
+                        <span class="gallery-title">E-Commerce Mobile App</span>
+                        <span class="gallery-category">Shopping</span>
                     </div>
                 </div>
 
+                <!-- Restaurant / Food Delivery App -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=600&h=400&fit=crop"
-                        alt="Dashboard">
+                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop"
+                        alt="Food Delivery App">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Analytics Dashboard</span>
-                        <span class="gallery-category">Web App</span>
+                        <span class="gallery-title">Restaurant & Food App</span>
+                        <span class="gallery-category">Food Delivery</span>
                     </div>
                 </div>
 
+                <!-- Institute Dashboard -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?w=600&h=400&fit=crop"
-                        alt="Data Visualization">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=400&fit=crop"
+                        alt="Institute Dashboard">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Data Visualization</span>
-                        <span class="gallery-category">AI/ML</span>
+                        <span class="gallery-title">Institute Admin Dashboard</span>
+                        <span class="gallery-category">Web Dashboard</span>
                     </div>
                 </div>
 
+                <!-- Learning Management System -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1618761714954-0b8cd0026356?w=600&h=400&fit=crop"
-                        alt="UI Design">
+                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=600&h=400&fit=crop"
+                        alt="Learning Management">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">UI/UX Design</span>
-                        <span class="gallery-category">Design</span>
+                        <span class="gallery-title">Learning Management System</span>
+                        <span class="gallery-category">Education Portal</span>
                     </div>
                 </div>
 
+                <!-- Mobile Shopping Experience -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=600&h=400&fit=crop"
-                        alt="Server Room">
+                    <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=600&h=400&fit=crop"
+                        alt="Mobile Shopping">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Cloud Infrastructure</span>
-                        <span class="gallery-category">Backend</span>
+                        <span class="gallery-title">Mobile Shopping Experience</span>
+                        <span class="gallery-category">E-Commerce</span>
                     </div>
                 </div>
             </div>
